# sdv-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  sdv_calc.py  sdv_items.py  sdv_mcp_server.py  sdv_parser.py  sdv_wiki.py
.github/workflows/: publish.yml
scripts/: gen_items.py
